syntax = "proto3";

package configure;
option go_package = "./v1;v1";
import "validate/validate.proto";
import "configure_server.proto";

message Resource{
  uint32 id = 1 ;
  string keyword = 2;
  string description = 3;
  string fields = 4;
  string tag = 5;
  bool private = 6;
  uint32 created_at = 7;
  uint32 updated_at = 8;
}

message PageResourceRequest{
  uint32 page = 1[(validate.rules).uint32 = {gt: 0}];
  uint32 page_size = 2[(validate.rules).uint32 = {gt: 0,lte:50}];
  optional string keyword = 3;
  optional string tag = 4;
}

message PageResourceReply {
  uint32 total = 1;
  repeated Resource list = 2;
}

// 新增环境
message AddResourceRequest {
  string keyword = 1[(validate.rules).string = {min_len: 1, max_len: 32}];
  string description = 2[(validate.rules).string = {min_len: 1, max_len: 128}];
  string tag = 3[(validate.rules).string = {min_len: 1, max_len: 32}];
  string fields = 4;
  optional bool private = 5;
  repeated uint32 servers = 6;
}

// 修改环境
message UpdateResourceRequest {
  uint32 id = 1 [(validate.rules).uint32 = {gt: 0}];
  string description = 2[(validate.rules).string = {min_len: 1, max_len: 128}];
  string tag = 3[(validate.rules).string = {min_len: 1, max_len: 32}];
  string fields = 4;
  optional bool private = 5;
  repeated uint32 servers = 6;
}

// 删除环境
message DeleteResourceRequest {
  uint32 id = 1 [(validate.rules).uint32 = {gt: 0}];
}
