syntax = "proto3";

package v1;
option go_package = "./v1;v1";
import "validate/validate.proto";
import "server.proto";
import "resource.proto";
import "business.proto";



message AllResourceServerRequest{
    int64 resource_id = 1;
}

message AllResourceServerReply {
  message ResourceServer{
    int64 resource_id = 1;
    int64 server_id = 2;
    Server server = 3;
  }
  repeated ResourceServer list = 1;
}


message AllServerResourceRequest{
  int64 server_id = 1;
}

message AllServerResourceReply {
  repeated Resource list = 1;
}


message AllServerBusinessRequest{
  int64 server_id = 1;
}

message AllServerBusinessReply {
  repeated Business list = 1;
}


// 新增环境
message AddResourceServerRequest {
  int64 resource_id = 1[(validate.rules).int64 = {gt: 0}];
  int64 server_id = 2[(validate.rules).int64 = {gt: 0}];
}

// 删除环境
message DeleteResourceServerRequest {
  int64 id = 1 [(validate.rules).int64 = {gt: 0}];
}
